# code-sage

./: ARCHITECTURE.md  Cargo.toml  LICENSE  README.md
src/: config.rs  error.rs  lib.rs  main.rs  metadata.rs  types.rs
src/ast/: mod.rs  splitter.rs
src/embeddings/: mod.rs  ollama.rs  openai.rs
src/handlers/: clear.rs  index.rs  mod.rs  search.rs  status.rs
src/search/: bm25.rs  hybrid.rs  mod.rs
src/snapshot/: mod.rs
src/sync/: merkle.rs  mod.rs  synchronizer.rs
src/vectordb/: mod.rs  usearch_db.rs
